[package]
name = "leptos_todomvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
# leptos = { git = "https://github.com/gbj/leptos", branch = "main" }
leptos = "0.1.0-alpha"
log = "0.4.17"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
